api v2.1 updated to database

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-PORT=5000
+PORT=3000
+DATABASE_TYPE=sqlite
+DATABASE_NAME=mytools-database.sqlite3
+NODE_ENV=development
+TOKEN_SALT="Smell is a potent wizard that transports you across thousands of miles and all the years you have lived"
