--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon ./src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "fs": "^0.0.1-security",
-    "nodemon": "^3.1.10"
+    "knex": "^3.1.0",
+    "nodemon": "^3.1.10",
+    "objection": "^3.1.5",
+    "sqlite3": "^5.1.7"
   }
 }
